fixed jumping of login form

--- a/client/src/modules/auth/components/InputField/styles.module.scss
+++ b/client/src/modules/auth/components/InputField/styles.module.scss
@@ -1,3 +1,5 @@
 .input_field{
     width: 100%;
+    min-height: 65px;
+    margin-bottom: 15px;
 }
