--- a/client/src/modules/auth/components/LoginForm/styles.module.scss
+++ b/client/src/modules/auth/components/LoginForm/styles.module.scss
@@ -4,15 +4,12 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    gap: 25px;
     width: 100%;
 }
 
 .error_message{
-    height: 24px;
+    display: block;
+    height: 16px;
     color: $red;
-}
-
-.input_field{
-    width: 100%;
+    margin-top: 10px;
 }
